--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -542,7 +542,7 @@
     "\n",
     "What are the strengths of the model; when does it perform well?\n",
     "\n",
-    "The model performs well with data of high dimensionality, and when it must only make a binary classification decision\n",
+    "The model performs well with data of high dimensionality, and when it must only make a binary classification decision. It also performs well on data where some labels may be missing.\n",
     "\n",
     "What are the weaknesses of the model; when does it perform poorly?\n",
     "\n",
@@ -555,16 +555,38 @@
     "Answers for Decision Trees:\n",
     "\n",
     "Describe one real-world application in industry where the model can be applied. (You may need to do research for this — give references!)\n",
+    "\n",
+    "In industry, decision trees (along with ID3 for rule mining) can be used in medical diagnostics\n",
+    "\n",
     "What are the strengths of the model; when does it perform well?\n",
+    "\n",
+    "Decision trees perform well in scenarios where a human needs to understand \"why\" the algorithm made the decision they did; they are easy to interpret\n",
+    "\n",
     "What are the weaknesses of the model; when does it perform poorly?\n",
+    "\n",
+    "As we saw in the lesson on decision trees, they can over-fit to the training dataset easily if a minimum number of nodes is not set for decision boundaries, and also do not work well for data where some labels may be missing.\n",
+    "\n",
     "What makes this model a good candidate for the problem, given what you know about the data?\n",
+    "\n",
+    "Since we know that it is a model of human behavior (making donations), learning a decision tree might help us to learn other related functions in the future (e.g., predicting who will be a 'large donor'); we may be able to re-use parts of the decision tree\n",
     "\n",
     "Answers for Support Vector Machines:\n",
     "\n",
     "Describe one real-world application in industry where the model can be applied. (You may need to do research for this — give references!)\n",
+    "\n",
+    "In biology, classification of proteins with regards to homology. Reference: http://www.ics.uci.edu/~welling/teatimetalks/kernelclub04/spectrum.pdf\n",
+    "\n",
     "What are the strengths of the model; when does it perform well?\n",
+    "\n",
+    "The model is relatively efficient to compute and we can use the \"kernel trick\" to embed domain knowledge in our model\n",
+    "\n",
     "What are the weaknesses of the model; when does it perform poorly?\n",
-    "What makes this model a good candidate for the problem, given what you know about the data?"
+    "\n",
+    "The model performs poorly on time-series data and data that is not linearly separable and requires labeled training data\n",
+    "\n",
+    "What makes this model a good candidate for the problem, given what you know about the data?\n",
+    "\n",
+    "It makes intuitive sense that the class of likely donors vs non-likely donors should be linearly separable, so finding a decision boundary with maximal margin will allow us to perform well on test data.\n"
    ]
   },
   {
@@ -593,6 +615,8 @@
    "source": [
     "# TODO: Import two metrics from sklearn - fbeta_score and accuracy_score\n",
     "\n",
+    "from sklearn.metrics import fbeta_score, accuracy_score\n",
+    "\n",
     "def train_predict(learner, sample_size, X_train, y_train, X_test, y_test): \n",
     "    '''\n",
     "    inputs:\n",
@@ -608,7 +632,7 @@
     "    \n",
     "    # TODO: Fit the learner to the training data using slicing with 'sample_size'\n",
     "    start = time() # Get start time\n",
-    "    learner = None\n",
+    "    learner = learner.fit(X_train,y_train)\n",
     "    end = time() # Get end time\n",
     "    \n",
     "    # TODO: Calculate the training time\n",
